kuard/kuard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
  labels:
    app: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: kuard-service
spec:
  selector:
    app: kuard
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
